syntax = "proto3";

package product;

option go_package = "./";

message Product {
  int32 id = 1;
  string name = 2;
  int32 quantity = 3;
  string description = 4;
  int32 company_id = 5;
  string state = 6;
}

service ProductService {
    rpc AddShipment (Product) returns (Product);
}